full pipeline without dr, non fed

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,42 +16,137 @@
     "import time\n",
     "from sklearn.manifold import TSNE\n",
     "from torch.utils.data import Dataset\n",
-    "from torchvision import datasets, transforms"
+    "from torchvision import datasets, transforms\n",
+    "import keras \n",
+    "from keras.datasets import mnist\n",
+    "from keras.models import Model\n",
+    "from keras.layers import Dense, Input\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Dropout, Flatten\n",
+    "from keras import backend as k\n",
+    "from torch.utils.data import Subset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data: torch.Size([60000, 28, 28]), Targets: torch.Size([60000])\n"
-     ]
-    }
-   ],
-   "source": [
     "# Data Stuff\n",
     "# Set download to False if already downloaded\n",
-    "\n",
+    "\"\"\"\"\"\n",
     "transform = transforms.Compose([transforms.ToTensor()])\n",
     "\n",
     "# Load the MNIST dataset \n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=False, transform=transform)\n",
     "mnist_testset = datasets.MNIST(root='./data', train=False, download=False, transform=transform)\n",
     "\n",
-    "print(f\"Data: {mnist_trainset.data.shape}, Targets: {mnist_trainset.targets.shape}\")"
+    "print(f\"Data: {mnist_trainset.data.shape}, Targets: {mnist_trainset.targets.shape}\")\n",
+    "\"\"\"\"\"\n",
+    "# test data\n",
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_rows, img_cols=28, 28\n",
+    "\n",
+    "if k.image_data_format() == 'channels_first':\n",
+    "   x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols)\n",
+    "   x_test = x_test.reshape(x_test.shape[0], 1, img_rows, img_cols)\n",
+    "   inpx = (1, img_rows, img_cols)\n",
+    "\n",
+    "else:\n",
+    "   x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1)\n",
+    "   x_test = x_test.reshape(x_test.shape[0], img_rows, img_cols, 1)\n",
+    "   inpx = (img_rows, img_cols, 1)\n",
+    "\n",
+    "x_train = x_train.astype('float32')\n",
+    "x_test = x_test.astype('float32')\n",
+    "x_train /= 255\n",
+    "x_test /= 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 28, 28, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = keras.utils.to_categorical(y_train)\n",
+    "y_test = keras.utils.to_categorical(y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60000, 10)\n",
+      "(28, 28, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_train.shape)\n",
+    "print(inpx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom dataset class that wraps x_train and y_train\n",
+    "class MNISTDataset(Dataset):\n",
+    "    def __init__(self, data, targets):\n",
+    "        # data: the images (flattened or original, depending on your requirement)\n",
+    "        # targets: the labels (e.g., the digit for each image)\n",
+    "        self.data = data\n",
+    "        self.targets = targets\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        # Return the number of samples in the dataset\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        # Returns a single sample and its corresponding label\n",
+    "        return self.data[idx], self.targets[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = MNISTDataset(x_train, y_train)"
    ]
   },
   {
@@ -63,64 +158,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "def dirichlet_partition(dataset, num_partitions, num_classes, alpha=0.5, seed=42):\n",
+    "def dirichlet_partition(dataset, partitions_number=3, alpha=0.5, seed=42):\n",
     "    \"\"\"\n",
     "    Partition the dataset into multiple subsets using a Dirichlet distribution.\n",
     "\n",
     "    Args:\n",
-    "        dataset (torch.utils.data.Dataset): The dataset to partition. It should have\n",
-    "                                            'data' and 'targets' attributes.\n",
-    "        num_partitions (int): Number of partitions (clients) to divide the dataset into.\n",
-    "        num_classes (int): Number of unique classes in the dataset.\n",
-    "        alpha (float): Dirichlet concentration parameter (controls imbalance).\n",
+    "        dataset (torch.utils.data.Dataset): The dataset to partition. It should have 'data' and 'targets' attributes.\n",
+    "        partitions_number (int): Number of partitions to create.\n",
+    "        alpha (float): The concentration parameter of the Dirichlet distribution. A lower alpha value leads to more imbalanced partitions.\n",
     "        seed (int): Random seed for reproducibility.\n",
     "\n",
     "    Returns:\n",
-    "        dict: A dictionary where keys are partition indices (0 to num_partitions-1)\n",
+    "        dict: A dictionary where keys are partition indices (0 to partitions_number-1)\n",
     "              and values are lists of indices corresponding to the samples in each partition.\n",
     "    \"\"\"\n",
     "    np.random.seed(seed)\n",
-    "\n",
-    "    # Extract labels\n",
-    "    if isinstance(dataset.targets, np.ndarray):\n",
-    "        y_train = dataset.targets\n",
-    "    elif hasattr(dataset.targets, \"numpy\"):  # For torch.Tensor\n",
-    "        y_train = dataset.targets.numpy()\n",
-    "    else:\n",
-    "        y_train = np.asarray(dataset.targets)\n",
-    "\n",
-    "    min_size = 0\n",
-    "    K = np.unique(y_train)\n",
-    "    N = y_train.shape[0]  # Total number of samples\n",
+    "    \n",
+    "    # Extract targets (labels) from the dataset\n",
+    "    y_train = dataset.targets\n",
+    "    \n",
+    "    # Number of classes in the dataset\n",
+    "    num_classes = len(np.unique(y_train))\n",
+    "    \n",
+    "    # Total number of samples in the dataset\n",
+    "    N = len(y_train)\n",
+    "    \n",
+    "    # Initialize the map that will store the indices for each partition\n",
     "    net_dataidx_map = {}\n",
+    "    \n",
+    "    # Initialize minimum size to ensure partitions have enough samples\n",
+    "    min_size = 0\n",
     "\n",
-    "    # Ensure minimum size of partition\n",
+    "    # Repeat partitioning until each partition has at least 10 samples\n",
     "    while min_size < 10:\n",
-    "        idx_batch = [[] for _ in range(num_partitions)]\n",
-    "        for k in K:\n",
+    "        idx_batch = [[] for _ in range(partitions_number)]  # Empty lists for each partition\n",
+    "        \n",
+    "        for k in range(num_classes):\n",
+    "            # Get indices of all samples belonging to class k\n",
     "            idx_k = np.where(y_train == k)[0]\n",
     "            np.random.shuffle(idx_k)\n",
     "\n",
-    "            if len(idx_k) > 0:\n",
-    "                proportions = np.random.dirichlet(np.repeat(alpha, num_partitions))\n",
-    "                proportions = np.array([p * (len(idx_j) < N / num_partitions) for p, idx_j in zip(proportions, idx_batch)])\n",
-    "                proportions = proportions / proportions.sum()\n",
-    "                proportions = (np.cumsum(proportions) * len(idx_k)).astype(int)[:-1]\n",
-    "                idx_batch = [idx_j + idx.tolist() for idx_j, idx in zip(idx_batch, np.split(idx_k, proportions))]\n",
+    "            # Sample a Dirichlet distribution to determine the proportion of each partition\n",
+    "            proportions = np.random.dirichlet(np.repeat(alpha, partitions_number))\n",
+    "            \n",
+    "            # Adjust proportions so that they don't allocate more samples than available\n",
+    "            proportions = np.array([p * (len(idx_j) < N / partitions_number) for p, idx_j in zip(proportions, idx_batch)])\n",
+    "            proportions = proportions / proportions.sum()\n",
+    "            \n",
+    "            # Split the indices according to the calculated proportions\n",
+    "            proportions = (np.cumsum(proportions) * len(idx_k)).astype(int)[:-1]\n",
+    "            idx_batch = [idx_j + idx.tolist() for idx_j, idx in zip(idx_batch, np.split(idx_k, proportions))]\n",
     "\n",
+    "        # Check the minimum partition size\n",
     "        min_size = min([len(idx_j) for idx_j in idx_batch])\n",
     "\n",
-    "    for j in range(num_partitions):\n",
+    "    # Shuffle the partitions and store them in the map\n",
+    "    for j in range(partitions_number):\n",
     "        np.random.shuffle(idx_batch[j])\n",
     "        net_dataidx_map[j] = idx_batch[j]\n",
     "\n",
-    "    return net_dataidx_map\n"
+    "    return net_dataidx_map"
    ]
   },
   {
@@ -132,65 +233,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = mnist_trainset\n",
+    "# dataset = mnist_trainset\n",
     "\n",
-    "# Number of clients (participants in federated learning)\n",
-    "num_clients = 10\n",
-    "# Number of unique classes in MNIST\n",
-    "num_classes = 10"
+    "partitioned_data = dirichlet_partition(train_dataset, partitions_number=3, alpha=0.5)\n",
+    "partition_0_dataset = Subset(train_dataset, partitioned_data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Client 0: 5744 samples\n",
-      "Client 1: 7794 samples\n",
-      "Client 2: 4667 samples\n",
-      "Client 3: 2937 samples\n",
-      "Client 4: 7538 samples\n",
-      "Client 5: 6137 samples\n",
-      "Client 6: 6201 samples\n",
-      "Client 7: 7199 samples\n",
-      "Client 8: 5441 samples\n",
-      "Client 9: 6342 samples\n"
+      "x_train1 shape: (20263, 28, 28, 1)\n",
+      "y_train1 shape: (20263,)\n"
      ]
     }
    ],
    "source": [
-    "partitions = dirichlet_partition(dataset, num_partitions=num_clients, num_classes=num_classes, alpha=0.5, seed=42)\n",
+    "x_train1 = []\n",
+    "y_train1 = []\n",
     "\n",
-    "# Check partitions\n",
-    "x = 0\n",
-    "for i, partition in partitions.items():\n",
-    "    x = x + len(partition)\n",
-    "    print(f\"Client {i}: {len(partition)} samples\")\n",
-    "print(x)\n"
+    "for img, label in partition_0_dataset:\n",
+    "    x_train1.append(img)\n",
+    "    y_train1.append(label)\n",
+    "\n",
+    "x_train1 = np.array(x_train1)\n",
+    "y_train1 = np.array(y_train1)\n",
+    "\n",
+    "# Check shapes to confirm they match the original structure\n",
+    "print(\"x_train1 shape:\", x_train1.shape)  # Should match the shape (num_samples, 784) if flattened\n",
+    "print(\"y_train1 shape:\", y_train1.shape)  # Should match the shape (num_samples,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60000\n"
+      "(60000, 28, 28, 1)\n",
+      "(60000,)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# partitions = dirichlet_partition(dataset, num_partitions=num_clients, num_classes=num_classes, alpha=0.5, seed=42)\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inpx = Input(shape=inpx)\n",
+    "layer1 = Conv2D(32, kernel_size=(3, 3), activation='relu')(inpx)\n",
+    "layer2 = Conv2D(64, (3, 3), activation='relu')(layer1)\n",
+    "layer3 = MaxPooling2D(pool_size=(3, 3))(layer2)\n",
+    "layer4 = Dropout(0.5)(layer3)\n",
+    "layer5 = Flatten()(layer4)\n",
+    "layer6 = Dense(250, activation='sigmoid')(layer5)\n",
+    "layer7 = Dense(10, activation='softmax')(layer6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/12\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Arguments `target` and `output` must have the same rank (ndim). Received: target.shape=(500,), output.shape=(500, 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m Model([inpx], layer7)\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39mkeras\u001b[38;5;241m.\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mAdadelta(),\n\u001b[0;32m      3\u001b[0m               loss\u001b[38;5;241m=\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlosses\u001b[38;5;241m.\u001b[39mcategorical_crossentropy,\n\u001b[0;32m      4\u001b[0m               metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m----> 6\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(x_train, y_train, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\nn.py:580\u001b[0m, in \u001b[0;36mcategorical_crossentropy\u001b[1;34m(target, output, from_logits, axis)\u001b[0m\n\u001b[0;32m    574\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    575\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArguments `target` and `output` must be at least rank 1. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    576\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReceived: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    577\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, output.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    578\u001b[0m     )\n\u001b[0;32m    579\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(target\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(output\u001b[38;5;241m.\u001b[39mshape):\n\u001b[1;32m--> 580\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    581\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArguments `target` and `output` must have the same rank \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    582\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(ndim). Received: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    583\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, output.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    584\u001b[0m     )\n\u001b[0;32m    585\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e1, e2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(target\u001b[38;5;241m.\u001b[39mshape, output\u001b[38;5;241m.\u001b[39mshape):\n\u001b[0;32m    586\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m e1 \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m e2 \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m e1 \u001b[38;5;241m!=\u001b[39m e2:\n",
+      "\u001b[1;31mValueError\u001b[0m: Arguments `target` and `output` must have the same rank (ndim). Received: target.shape=(500,), output.shape=(500, 10)"
+     ]
+    }
+   ],
+   "source": [
+    "model = Model([inpx], layer7)\n",
+    "model.compile(optimizer=keras.optimizers.Adadelta(),\n",
+    "              loss=keras.losses.categorical_crossentropy,\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "model.fit(x_train, y_train, epochs=12, batch_size=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss= 2.291794538497925\n",
+      "accuracy= 0.09769999980926514\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('loss=', score[0])\n",
+    "print('accuracy=', score[1])"
+   ]
   },
   {
    "cell_type": "code",
