Partition working (for) now

--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,53 +73,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 28, 28, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x_train.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = keras.utils.to_categorical(y_train)\n",
-    "y_test = keras.utils.to_categorical(y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(60000, 10)\n",
+      "(60000, 28, 28, 1)\n",
+      "(60000,)\n",
+      "<class 'numpy.ndarray'>\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
       "(28, 28, 1)\n"
      ]
     }
    ],
    "source": [
+    "print(x_train.shape)\n",
     "print(y_train.shape)\n",
+    "print(type(y_train))\n",
+    "K = np.unique(y_train)\n",
+    "print(K)\n",
     "print(inpx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,18 +133,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Help Class"
+    "# Help Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dirichlet_partition(dataset, partitions_number=3, alpha=0.5, seed=42):\n",
+    "def balanced_dirichlet_partition(dataset, partitions_number=10, alpha=0.5, seed=42):\n",
     "    \"\"\"\n",
-    "    Partition the dataset into multiple subsets using a Dirichlet distribution.\n",
+    "    Partition the dataset into multiple subsets using a Dirichlet distribution,\n",
+    "    ensuring that each partition contains samples from every class.\n",
     "\n",
     "    Args:\n",
     "        dataset (torch.utils.data.Dataset): The dataset to partition. It should have 'data' and 'targets' attributes.\n",
@@ -184,44 +165,46 @@
     "    # Number of classes in the dataset\n",
     "    num_classes = len(np.unique(y_train))\n",
     "    \n",
-    "    # Total number of samples in the dataset\n",
-    "    N = len(y_train)\n",
-    "    \n",
     "    # Initialize the map that will store the indices for each partition\n",
     "    net_dataidx_map = {}\n",
     "    \n",
-    "    # Initialize minimum size to ensure partitions have enough samples\n",
-    "    min_size = 0\n",
+    "    # Initialize lists to store the indices for each class\n",
+    "    class_indices = {k: np.where(y_train == k)[0] for k in range(num_classes)}\n",
+    "    \n",
+    "    # Shuffle the indices within each class to ensure random distribution\n",
+    "    for k in class_indices.keys():\n",
+    "        np.random.shuffle(class_indices[k])\n",
+    "    \n",
+    "    # Ensure that each partition gets at least one sample from each class\n",
+    "    min_size = 10  # Ensuring each class has at least 10 samples in each partition\n",
+    "    idx_batch = [[] for _ in range(partitions_number)]\n",
     "\n",
-    "    # Repeat partitioning until each partition has at least 10 samples\n",
-    "    while min_size < 10:\n",
-    "        idx_batch = [[] for _ in range(partitions_number)]  # Empty lists for each partition\n",
+    "    # Assign at least `min_size` samples from each class to every partition\n",
+    "    for k in range(num_classes):\n",
+    "        # Split the class indices equally across the partitions\n",
+    "        split = np.array_split(class_indices[k], partitions_number)\n",
+    "        for i in range(partitions_number):\n",
+    "            idx_batch[i].extend(split[i][:min_size])\n",
+    "\n",
+    "        # Remove the samples that were assigned equally\n",
+    "        class_indices[k] = class_indices[k][min_size*partitions_number:]\n",
+    "\n",
+    "    # Now distribute the remaining samples using the Dirichlet distribution\n",
+    "    for k in range(num_classes):\n",
+    "        remaining_indices = class_indices[k]\n",
+    "        proportions = np.random.dirichlet(np.repeat(alpha, partitions_number))\n",
+    "        proportions = (np.cumsum(proportions) * len(remaining_indices)).astype(int)[:-1]\n",
+    "        split_remaining = np.split(remaining_indices, proportions)\n",
     "        \n",
-    "        for k in range(num_classes):\n",
-    "            # Get indices of all samples belonging to class k\n",
-    "            idx_k = np.where(y_train == k)[0]\n",
-    "            np.random.shuffle(idx_k)\n",
+    "        for i in range(partitions_number):\n",
+    "            idx_batch[i].extend(split_remaining[i])\n",
     "\n",
-    "            # Sample a Dirichlet distribution to determine the proportion of each partition\n",
-    "            proportions = np.random.dirichlet(np.repeat(alpha, partitions_number))\n",
-    "            \n",
-    "            # Adjust proportions so that they don't allocate more samples than available\n",
-    "            proportions = np.array([p * (len(idx_j) < N / partitions_number) for p, idx_j in zip(proportions, idx_batch)])\n",
-    "            proportions = proportions / proportions.sum()\n",
-    "            \n",
-    "            # Split the indices according to the calculated proportions\n",
-    "            proportions = (np.cumsum(proportions) * len(idx_k)).astype(int)[:-1]\n",
-    "            idx_batch = [idx_j + idx.tolist() for idx_j, idx in zip(idx_batch, np.split(idx_k, proportions))]\n",
+    "    # Shuffle the indices within each partition\n",
+    "    for i in range(partitions_number):\n",
+    "        np.random.shuffle(idx_batch[i])\n",
+    "        net_dataidx_map[i] = idx_batch[i]\n",
     "\n",
-    "        # Check the minimum partition size\n",
-    "        min_size = min([len(idx_j) for idx_j in idx_batch])\n",
-    "\n",
-    "    # Shuffle the partitions and store them in the map\n",
-    "    for j in range(partitions_number):\n",
-    "        np.random.shuffle(idx_batch[j])\n",
-    "        net_dataidx_map[j] = idx_batch[j]\n",
-    "\n",
-    "    return net_dataidx_map"
+    "    return net_dataidx_map\n"
    ]
   },
   {
@@ -233,31 +216,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset = mnist_trainset\n",
+    "# Partition \n",
     "\n",
-    "partitioned_data = dirichlet_partition(train_dataset, partitions_number=3, alpha=0.5)\n",
+    "partitioned_data = balanced_dirichlet_partition(train_dataset, partitions_number=10, alpha=0.5)\n",
     "partition_0_dataset = Subset(train_dataset, partitioned_data[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train1 shape: (20263, 28, 28, 1)\n",
-      "y_train1 shape: (20263,)\n"
+      "8115\n",
+      "6299\n",
+      "7690\n",
+      "3996\n",
+      "5373\n",
+      "5975\n",
+      "6862\n",
+      "3842\n",
+      "6307\n",
+      "5541\n"
      ]
     }
    ],
    "source": [
+    "# Check sizes\n",
+    "\n",
+    "for i in partitioned_data:\n",
+    "    print(len(partitioned_data[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train1 shape: (8115, 28, 28, 1)\n",
+      "y_train1 shape: (8115,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reformatting Subsets\n",
+    "\n",
     "x_train1 = []\n",
     "y_train1 = []\n",
     "\n",
@@ -275,27 +289,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 28, 28, 1)\n",
-      "(60000,)\n"
+      "[0 1 2 3 4 5 6 7 8 9]\n"
      ]
     }
    ],
    "source": [
-    "# partitions = dirichlet_partition(dataset, num_partitions=num_clients, num_classes=num_classes, alpha=0.5, seed=42)\n",
-    "print(x_train.shape)\n",
-    "print(y_train.shape)\n"
+    "L = np.unique(y_train1)\n",
+    "print(L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the labels for model\n",
+    "\n",
+    "y_train = keras.utils.to_categorical(y_train)\n",
+    "\n",
+    "y_train1 = keras.utils.to_categorical(y_train1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8115, 28, 28, 1)\n",
+      "(8115, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(x_train1.shape)\n",
+    "print(y_train1.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,28 +356,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/12\n"
+      "Epoch 1/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 25ms/step - accuracy: 0.1295 - loss: 2.7049\n",
+      "Epoch 2/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 25ms/step - accuracy: 0.1311 - loss: 2.6580\n",
+      "Epoch 3/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1305 - loss: 2.6198\n",
+      "Epoch 4/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1344 - loss: 2.5679\n",
+      "Epoch 5/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1358 - loss: 2.5173\n",
+      "Epoch 6/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1319 - loss: 2.4605\n",
+      "Epoch 7/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1390 - loss: 2.4072\n",
+      "Epoch 8/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1442 - loss: 2.3512\n",
+      "Epoch 9/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 26ms/step - accuracy: 0.1456 - loss: 2.3003\n",
+      "Epoch 10/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1455 - loss: 2.2552\n",
+      "Epoch 11/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 24ms/step - accuracy: 0.1642 - loss: 2.2028\n",
+      "Epoch 12/12\n",
+      "\u001b[1m127/127\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 25ms/step - accuracy: 0.1879 - loss: 2.1622\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Arguments `target` and `output` must have the same rank (ndim). Received: target.shape=(500,), output.shape=(500, 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m Model([inpx], layer7)\n\u001b[0;32m      2\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39mkeras\u001b[38;5;241m.\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mAdadelta(),\n\u001b[0;32m      3\u001b[0m               loss\u001b[38;5;241m=\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlosses\u001b[38;5;241m.\u001b[39mcategorical_crossentropy,\n\u001b[0;32m      4\u001b[0m               metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m----> 6\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(x_train, y_train, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m12\u001b[39m, batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mc:\\Users\\micha\\anaconda3\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\nn.py:580\u001b[0m, in \u001b[0;36mcategorical_crossentropy\u001b[1;34m(target, output, from_logits, axis)\u001b[0m\n\u001b[0;32m    574\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    575\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArguments `target` and `output` must be at least rank 1. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    576\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mReceived: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    577\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, output.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    578\u001b[0m     )\n\u001b[0;32m    579\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(target\u001b[38;5;241m.\u001b[39mshape) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(output\u001b[38;5;241m.\u001b[39mshape):\n\u001b[1;32m--> 580\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    581\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mArguments `target` and `output` must have the same rank \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    582\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(ndim). Received: \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    583\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, output.shape=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput\u001b[38;5;241m.\u001b[39mshape\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    584\u001b[0m     )\n\u001b[0;32m    585\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e1, e2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(target\u001b[38;5;241m.\u001b[39mshape, output\u001b[38;5;241m.\u001b[39mshape):\n\u001b[0;32m    586\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m e1 \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m e2 \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m e1 \u001b[38;5;241m!=\u001b[39m e2:\n",
-      "\u001b[1;31mValueError\u001b[0m: Arguments `target` and `output` must have the same rank (ndim). Received: target.shape=(500,), output.shape=(500, 10)"
-     ]
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x2b2813b2fd0>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -341,7 +406,7 @@
     "              loss=keras.losses.categorical_crossentropy,\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(x_train, y_train, epochs=12, batch_size=500)"
+    "model.fit(x_train1, y_train1, epochs=12, batch_size=64)"
    ]
   },
   {
@@ -359,6 +424,8 @@
     }
    ],
    "source": [
+    "y_test = keras.utils.to_categorical(y_test)\n",
+    "\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('loss=', score[0])\n",
     "print('accuracy=', score[1])"
