--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -19,12 +19,16 @@
     "from torchvision import datasets, transforms\n",
     "import keras \n",
     "from keras.datasets import mnist\n",
-    "from keras.models import Model\n",
-    "from keras.layers import Dense, Input\n",
-    "from keras.layers import Conv2D, MaxPooling2D, Dropout, Flatten\n",
     "from keras import backend as k\n",
     "from torch.utils.data import Subset\n",
     "import model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data"
    ]
   },
   {
@@ -46,15 +50,7 @@
     "\"\"\"\"\"\n",
     "# test data\n",
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "img_rows, img_cols=28, 28\n",
     "\n",
     "if k.image_data_format() == 'channels_first':\n",
@@ -91,6 +87,8 @@
     }
    ],
    "source": [
+    "# Check data shapes. later create dataloader or something similar to handle data\n",
+    "\n",
     "print(x_train.shape)\n",
     "print(y_train.shape)\n",
     "print(type(y_train))\n",
@@ -272,7 +270,7 @@
     }
    ],
    "source": [
-    "# Reformatting Subsets\n",
+    "# Reformatting Subsets, loop for all\n",
     "\n",
     "x_train1 = []\n",
     "y_train1 = []\n",
@@ -303,6 +301,7 @@
     }
    ],
    "source": [
+    "# Check target classes of subclasses\n",
     "L = np.unique(y_train1)\n",
     "print(L)"
    ]
@@ -391,29 +390,6 @@
    "source": [
     "model_1.train_model()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loss= 2.291794538497925\n",
-      "accuracy= 0.09769999980926514\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
